# agentnav

./: .cloudbuildignore  .cursorignore  .dockerignore  .env  .env.example  .eslintrc.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .secrets.baseline  App.tsx  CI_WORKFLOW_FIX.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CROSS_PROJECT_DNS_IMPLEMENTATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_VERIFICATION.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.frontend  ESLINT_V9_MIGRATION.md  FR020_COMPLETION_SUMMARY.md  FR020_README.md  FR028_IMPLEMENTATION_SUMMARY.md  FR029_IMPLEMENTATION_SUMMARY.md  FR160_INVESTIGATION.md  FR165_INVESTIGATION_REPORT.md  FR165_QUICK_START.md  FR201_DEPLOYMENT_CHECKLIST.md  FR201_QUICK_REFERENCE.md  FR335_IMPLEMENTATION_COMPLETE.md  FRONTEND_SERVICE_FIX.md  GEMMA_QUICK_SETUP.txt  GEMMA_SETUP_COMPLETE.md  GITHUB_TO_GCP_ACTION_PLAN.md  HACKATHON_RESCUE_PLAN.md  HANDOFF_DOCUMENT.md  IMPLEMENTATION_COMPLETE.md  (+46 more)
backend/: Dockerfile  Dockerfile.dev  Dockerfile.gemma  Dockerfile.gemma.ci  __init__.py  demo_fr005.py  entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements-gemma.ci.txt  requirements-gemma.txt  requirements.txt  start.sh  test_a2a_protocol.py  test_adk_system.py  test_fr005_workflow.py  test_gemma_rollback.py  test_gemma_rollback_local.py  test_pr231_rollback.py
backend/agents/: __init__.py  base_agent.py  linker_agent.py  orchestrator_agent.py  suggestion_agent.py  summarizer_agent.py  visualizer_agent.py
backend/gemma_service/: Dockerfile  Dockerfile.base  README.md  __init__.py  auth.py  entrypoint.sh  inference.py  main.py  model_loader.py
backend/models/: __init__.py  a2a_messages.py  context_model.py  prompt_models.py  stream_event_model.py  suggestion_models.py  websocket_models.py
backend/routes/: prompt_routes.py  stream_routes.py  suggestion_routes.py
backend/scripts/: seed_prompts.py
backend/services/: __init__.py  a2a_protocol.py  a2a_security.py  context_persistence.py  event_emitter.py  firestore_client.py  gemini_client.py  gemma_client.py  gemma_service.py  prompt_loader.py  (+7 more)
(+355 files in other folders)
