[project]
name = "agentnav-backend"
version = "0.1.0"
description = "Agentic Navigator Backend - FastAPI + ADK Multi-Agent System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-cloud-firestore>=2.13.0",
    "httpx>=0.25.0", # For calling Gemma GPU service
    "websockets>=12.0", # For WebSocket support in FastAPI
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.6.0",
]

